k8s-manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3500
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: api
            port:
              number: 3500
      - path: /ready
        pathType: Exact
        backend:
          service:
            name: api
            port:
              number: 3500
      - path: /started
        pathType: Exact
        backend:
          service:
            name: api
            port:
              number: 3500
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
